# Ant_Project

./: .gitignore  21022024_evening.py  Ant.py  LICENSE  Phero-Version1.py  Phero.py  Phero_2.py  README.md  Version1.py  answer.py  ant_colony.py  chatgbt.py  dummy.py  experiments.py  github-tests.py  github_answer.py  main.py  map.py  now.py  pygame_antimanti_2.py  pygame_experiments.py  pygame_grids.py  pygame_grids_min.py  pygame_grids_min_3.py  pyproject.toml  requirements.txt  start_screen.py  test.py  testing_10012024.py
.github/workflows/: basic_ci.yml
dummy_files/: chatgbt_version.py  def_movement.py  github_answer.py  lucas_movement.py  main.py  pygame_learning.py
outdated/: Ant.py  Phero.py  Phero_3.py  map.py
outdated_versions/: Version_Matplot.py  Version_Pygame1_Version.py
python_ant_project/: main.py  my_module.py  output.txt
python_ants/: .gitignore  CODE_OF_CONDUCT.md
python_ants/my_python_package/: __init__.py
python_files/: chatgbt_version.py  dummy_classes.py
source/: main.py  start_screen.py
tests/: test_ants.py  test_functions.py  test_my_module.py  test_pheromon.py
